--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>Projeto Redes Sociais</title>
 </head>
 <body>
-    <h1>Oi terra</h1>
+    <main>
+        <div class="celular">
+            <iframe class="tela" name="frame" src="" frameborder="0"></iframe>
+        </div>
+        <ul>
+            <li><a href="paginas/home.html" target="frame"><img src="imagens/logo-home.jpg" alt="Home"></a></li>
+            <li><a href="paginas-extras/pag002.html" target="frame">YouTube</a></li>
+            <li><a href="paginas-extras/pag003.html" target="frame">GitHub</a></li>
+        </ul>
+    </main>
 </body>
 </html>
