--- a/paginas/twitter.html
+++ b/paginas/twitter.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Twitter</title>
     <style>
         *{
             margin: 0px;
@@ -12,21 +12,19 @@
         }
 
         body {
-            background-image: url(../imagens/tela-home.jpg);
+            background-image: url(../imagens/tela-twitter.jpg);
+            background-attachment: fixed;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+
         }
 
-        img {
-            /* height: 471px;
-            width: 270px; */
-            /* background-size: cover; */
-        }
     </style>
 </head>
 <body>
-        <!-- <div class="home"></div> -->
-        <!-- <img src="../imagens/tela-home.jpg" alt="home"> -->
-
+        <!-- <div class="tela">
+            
+        </div> -->
 </body>
 </html>
