--- a/index.html
+++ b/index.html
@@ -11,13 +11,18 @@
 <body>
     <main>
         <div class="celular">
-            <iframe class="tela" name="frame" src="" frameborder="0"></iframe>
+            <iframe class="tela" name="frame" src="paginas/home.html" frameborder="0"></iframe>
         </div>
-        <ul>
-            <li><a href="paginas/home.html" target="frame"><img src="imagens/logo-home.jpg" alt="Home"></a></li>
-            <li><a href="paginas-extras/pag002.html" target="frame">YouTube</a></li>
-            <li><a href="paginas-extras/pag003.html" target="frame">GitHub</a></li>
-        </ul>
+        <div class="lista">            
+            <ul type="none" >
+                <li><a href="paginas/home.html" target="frame"><img src="imagens/logo-home.jpg" alt="Home"></a></li>
+                <li><a href="paginas/youtube.html" target="frame"><img src="imagens/logo-youtube.jpg" alt="YouTube"></a></li>
+                <li><a href="paginas/github.html" target="frame"><img src="imagens/logo-github.jpg" alt="GitHub"></a></li>
+                <li><a href="paginas/instagram.html" target="frame"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a></li>
+                <li><a href="paginas/twitter.html" target="frame"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a></li>
+                <li><a href="paginas/facebook.html" target="frame"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a></li>
+            </ul>
+        </div>
     </main>
 </body>
 </html>
