update do projeto redes sociais

--- a/paginas/youtube.html
+++ b/paginas/youtube.html
@@ -21,16 +21,20 @@
         }
 
         div.link {
+            display: flex;
             background-color: darkred;
             height: 90px;
-            width: 270px;
-            text-align: center;
+            width: 270px;                       
+            color: white;
+            font-size: 1.3em;
+            align-items: center;
+            justify-content: center;
+            margin-top: -4px;
         }
 
-        div>a {       
-            color: white;
+        a {
             text-decoration: none;
-            font-size: 1.3em;
+            
         }
 
         div.link:hover {
@@ -43,8 +47,6 @@
     <div>
         <img src="../imagens/tela-youtube.png" alt="">
     </div>
-    <div class="link">
-        <a href="">ACESSE</a>
-    </div>
+    <a href="https://www.youtube.com/@CursoemVideo" target="_blank"><div class="link">ACESSE</div></a>    
 </body>
 </html>
