--- a/paginas/twitter.html
+++ b/paginas/twitter.html
@@ -12,19 +12,41 @@
         }
 
         body {
-            background-image: url(../imagens/tela-twitter.jpg);
-            background-attachment: fixed;
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-attachment: fixed;
+            font-family: Arial, Helvetica, sans-serif;
+        }
 
+        img {
+            width: 100%;
+            height: auto;       
+        }
+
+        div.link {
+            display: flex;
+            background-color: darkred;
+            height: 90px;
+            width: 270px;                       
+            color: white;
+            font-size: 1.3em;
+            align-items: center;
+            justify-content: center;
+            margin-top: -4px;
+        }
+
+        a {
+            text-decoration: none;
+            
+        }
+
+        div.link:hover {
+            background-color: red;
         }
 
     </style>
 </head>
 <body>
-        <!-- <div class="tela">
-            
-        </div> -->
+    <div>
+        <img src="../imagens/tela-twitter.jpg" alt="">
+    </div>
+    <a href="https://twitter.com/guanabara" target="_blank"><div class="link">ACESSE</div></a>    
 </body>
 </html>
