--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <main>
         <div class="celular">
-            <iframe class="tela" name="frame" src="paginas/home.html" frameborder="0"></iframe>
+            <iframe class="tela" name="frame" src="paginas/home.html" frameborder="0">
+                Seu navegador não é compatível com isso.
+            </iframe>
         </div>
         <div class="lista">            
             <ul type="none" >
