Finalização do projeto

--- a/paginas/facebook.html
+++ b/paginas/facebook.html
@@ -5,48 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tikbook</title>
-    <style>
-        *{
-            margin: 0px;
-            padding: 0px;            
-        }
-
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        img {
-            width: 100%;
-            height: auto;       
-        }
-
-        div.link {
-            display: flex;
-            background-color: darkred;
-            height: 90px;
-            width: 270px;                       
-            color: white;
-            font-size: 1.3em;
-            align-items: center;
-            justify-content: center;
-            margin-top: -4px;
-        }
-
-        a {
-            text-decoration: none;
-            
-        }
-
-        div.link:hover {
-            background-color: red;
-        }
-
-    </style>
+    <link rel="stylesheet" href="../estilos/social.css">
 </head>
 <body>
-    <div>
-        <img src="../imagens/tela-facebook.jpg" alt="">
-    </div>
-    <a href="https://www.tiktok.com/@cursoemvideo" target="_blank"><div class="link">ACESSE</div></a>    
+    <img src="../imagens/tela-facebook.jpg" alt="TikBook">
+    <a href="https://www.tiktok.com/@cursoemvideo" target="_blank">ACESSE</a>    
 </body>
 </html>
