--- a/paginas/youtube.html
+++ b/paginas/youtube.html
@@ -5,48 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youtube</title>
-    <style>
-        *{
-            margin: 0px;
-            padding: 0px;            
-        }
-
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        img {
-            width: 100%;
-            height: auto;       
-        }
-
-        div.link {
+    <link rel="stylesheet" href="../estilos/social.css">
+    <style> 
+        /* a {
             display: flex;
             background-color: darkred;
-            height: 90px;
-            width: 270px;                       
             color: white;
+            height: 90px;
+            width: 270px;                 
             font-size: 1.3em;
             align-items: center;
             justify-content: center;
             margin-top: -4px;
-        }
-
-        a {
-            text-decoration: none;
-            
-        }
-
-        div.link:hover {
-            background-color: red;
-        }
-
+            text-decoration: none;            
+        } */
     </style>
 </head>
 <body>
-    <div>
-        <img src="../imagens/tela-youtube.png" alt="">
-    </div>
-    <a href="https://www.youtube.com/@CursoemVideo" target="_blank"><div class="link">ACESSE</div></a>    
+    <img src="../imagens/tela-youtube.png" alt="YouTube">    
+    <a href="https://www.youtube.com/@CursoemVideo" target="_blank">ACESSE</a>    
 </body>
 </html>
